@@ -12,7 +12,8 @@ get_filename_component( Fortran_COMPILER_NAME ${CMAKE_Fortran_COMPILER} NAME )
 # Specific options per compiler:
 if( Fortran_COMPILER_NAME STREQUAL "gfortran" )
   
-  set( CMAKE_Fortran_FLAGS_ALL "-fwhole-file -std=f2008 -fall-intrinsics -pedantic" )
+  #set( CMAKE_Fortran_FLAGS_ALL "-std=f2008 -fall-intrinsics -pedantic" )               # v.4.4
+  set( CMAKE_Fortran_FLAGS_ALL "-fwhole-file -std=f2008 -fall-intrinsics -pedantic" )  # v.4.5
   set( CMAKE_Fortran_FLAGS "-pipe -funroll-all-loops" )
   set( CMAKE_Fortran_FLAGS_RELEASE "-pipe -funroll-all-loops" )
   set( CMAKE_Fortran_FLAGS_DEBUG "-g -ffpe-trap=zero,invalid -fsignaling-nans -fbacktrace" )
@@ -99,7 +100,7 @@ elseif( Fortran_COMPILER_NAME STREQUAL "ifort" )
     message( STATUS "Compiling with library options" )
   endif( WANT_LIBRARY )
   
-
+  
 elseif( Fortran_COMPILER_NAME STREQUAL "g95" )
   
   
@@ -115,7 +116,8 @@ elseif( Fortran_COMPILER_NAME STREQUAL "g95" )
   endif( WANT_CHECKS )
   
   if( WANT_WARNINGS )
-    set( WARN_FLAGS "-std=f2003 -Wall -Wobsolescent -Wunused-parameter -Wunused-internal-procs -Wunused-types -Wmissing-intent" )
+    #set( WARN_FLAGS "-std=f2003 -Wall -Wobsolescent -Wunused-parameter -Wunused-internal-procs -Wunused-types -Wmissing-intent" )
+    set( WARN_FLAGS "-std=f2003 -Wall -Wextra -Werror -Wno=102,112,136,165" )
     message( STATUS "Compiling with warnings" )
   endif( WANT_WARNINGS )
   
